--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -149,7 +149,7 @@
 				var empIdTd = $("<td></td>").append(item.empId);
 				var empNameTd = $("<td></td>").append(item.empName);
 				var genderTd = $("<td></td>").append(
-						item.gender == 'M' ? "男" : "女");
+						item.gender === 'M' ? "男" : "女");
 				var emailTd = $("<td></td>").append(item.email);
 				var deptNameTd = $("<td></td>")
 						.append(item.department.deptName);
